# LinkedIn-scraper

./: .env.example  .gitignore  API_EXAMPLES.md  AUTH_MIGRATION.md  AUTH_REFACTORING_SUMMARY.md  CLAUDE.md  LinkedIn Scraper.bat  PROFILE_ENRICHER_IMPLEMENTATION.md  PROFILE_ENRICHER_QUICKSTART.md  PROFILE_ENRICHER_README.md  QUICKSTART.md  README.md  cli.py  debug_experience.py  fix_chromedriver.py  full_structure.md  install.bat  install.sh  main.py  old_main.py  pyproject.toml  refactor.md  requirements.txt  start.bat  start.ps1  start.sh  test.py  test_auth_refactor.py  test_cv_system.py  test_structure.py  verify_system.py
.antigravity/: instructions.md
.claude/: rules.md  settings.local.json
actions/: connection_sender.py  group_outreach.py  mass_connections_sender.py  search_profiles.py
api/: __init__.py  app.py  dependencies.py
auth/: __init__.py  auth_manager.py  login_with_cookies.py  login_with_credentials.py
components/: __init__.py  selectors.py
config/: __init__.py  api_config.py  scraper_config.py  settings.py
core/: __init__.py  cv_generator.py  database.py  driver_manager.py  email_sender.py  email_tester.py  export_manager.py  groq_service.py
frontend/: app.js  index.html  styles.css
linkedin_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scraper/: google_search_profile_scraper.py  group_scraper.py  group_scraper1.py  smart_search_group.py  test1.py  test2.py
templates/: base_cv.tex
test/: html.html  html1.html  test2.py
utils/: __init__.py  cookie_handler.py  group_data_saver.py  logger.py  send_csv.py
(+47 files in other folders)
