[project]
name = "linkedin-scraper"
version = "1.0.0"
description = "LinkedIn automation platform with browser dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "selenium>=4.15.0",
    "undetected-chromedriver>=3.5.3",
    "fake-useragent>=1.4.0",
    "webdriver-manager>=4.0.1",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "dnspython>=2.4.0",
    "groq>=1.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
